--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Meu primeiro site no GitHub Pages</title>
-</head>
-<body>
-    <h1>Eu sou um jovem aprendiz</h1>
-</body>
-</html>
+ <!DOCTYPE html>
+  <html lang="pt-BR">
+    <head>
+      <meta charset="utf-8">   
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>Bootstrap CDN</title>
+  
+      <!-- Bootstrap links CDN-->
+      <link rel= "stylesheet" href= "https://maxcdn.Bootstrapcdn.com/Bootstrap/3.3.2/css/Bootstrap.min.css" > 
+      <link rel= "stylesheet" href= "https://maxcdn.Bootstrapcdn.com/Bootstrap/3.3.2/css/Bootstrap-theme.min.css" > 
+    </head>
+    <body>
+      <h1>Bootstrap CDN!</h1>
+      
+     <!-- Dependência jQuery-->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+     <script src= "https://maxcdn.Bootstrapcdn.com/Bootstrap/3.3.2/js/Bootstrap.min.js" ></script>
+    </body>
+  </html>
